# tomo_mapper

./: CITATION.cff  README.md  SOPost.ipynb  acquisitionMapper.ipynb  acquisitionMapper.py  arrayHandling.ipynb  codemeta.json  combinationMetadataDocument.ipynb  datasetMapper.py  datasetMapping.ipynb  imageMapper.py  mapping_cli.py  metaMapper.py  plugin_wrapper.py  pp13-mapper.spec  pyinstaller.spec  pyproject.toml  renovate.json  requirements.dist.txt  requirements.txt  semMapper.ipynb  somesy.toml
.github/: dependabot.yml
.github/workflows/: build_executable.yaml  build_executable.yml  coveralls.yml  installer.yml  installer_nuitka.yml  plugin-integration.yml  python-app.yml  sampleMapping_on_push_and_pr.yml
mappingservice-plugin/: build.gradle  settings.gradle
mappingservice-plugin/integrationtests/: basic.hurl
maps/parsing/: inputmap_thermofisher.json  inputmap_zeiss-auriga.json
schemas/: sem_fib_nested_schema_map.json
src/: InputReader.py  MapfileReader.py  OutputWriter.py  Preprocessor.py  config.py  util.py
src/IO/: BaseInputReader.py  MappingAbortionError.py
src/IO/sem/: InputReader.py  OutputWriter.py
src/IO/tomo/: InputReader.py  MapfileReader.py  OutputWriter.py
src/model/: Acquisition.py  Dataset.py  ImageMD.py  RunMD.py  Schema_Concept.py  SetupMD.py  TOMO_Image.py
src/model/SchemaConcepts/: Acquisition_simplified.py  Dataset_simplified.py  SEM_Image.py  Schema_Concept.py  TOMO_Image.py
src/parser/: Atlas3dParser.py  EMProjectParser.py  ImageParser.py  MetadataParser.py  ParserFactory.py  ProjectDataParser.py  RunMD_Parser.py  SetupMD_Parser.py  TiffParser.py  mapping_util.py
src/parser/impl/: Atlas3dParser.py  Dataset_infoParser.py  EMProjectParser.py  HdrParser.py  ProjectDataParser.py  TiffParser.py  TomographyProjectParser.py  TxtParser.py
src/resources/maps/: acquisition_map.csv  image_map.csv
src/tomo_mapper/: Preprocessor.py  mapping_main.py  util.py
src/tomo_mapper/model/: ImageMD.py  RunMD.py  SetupMD.py
src/tomo_mapper/parser/: ImageParser.py  ParserFactory.py  RunMD_Parser.py  SetupMD_Parser.py  mapping_util.py
tests/: test_emprojectparser.py  test_preprocessor.py  test_runmd.py
tests/io_tests/: test_inputreader_sem.py
tests/io_tests/sem/: test_inputreader_sem.py
tests/io_tests/tomo/: test_inputfolder.py  test_inputreader_tomo.py  test_mapreader.py
tests/model_tests/: test_dataset.py  test_runmd.py  test_semimage.py  test_tomoimage.py
tests/parser_tests/: test_emprojectparser.py  test_mapfilereader.py  test_mappingutil.py  test_preprocessor.py  test_tiffparser.py  test_txtparser.py
tests/sampleData/: EMProject.emxml
(+52 files in other folders)
